# dudnikov-HW-ABC-5

./: README.md
source_code/: CMakeLists.txt  ConveyorWorker.cpp  ConveyorWorker.h  Doctor.cpp  Doctor.h  Person.h  Receptionist.cpp  Receptionist.h  Work.cpp  Work.h  main.cpp
